# 3d_render_from_zero

./: .gitignore  CMakeLists.txt  Matrix4d.h  README.md  RenderContext.h  Vector4d.h  bitmap.h  main.cpp  mesh.h  starfield.h
src/camera/: Camera.cpp  Camera.h
src/constants/: constants.h
src/geometric_primitives/: 4d_primitives.cpp  4d_primitives.h  MatrixBase.h  Vertex.cpp  Vertex.h
src/load_models/: Object3d.cpp  Object3d.h
src/rendering/: RenderContext.cpp  RenderContext.h
src/rendering/bitmap/: bitmap.cpp  bitmap.h
src/rendering/rendering_helpers/: Edge.cpp  Edge.h  Gradients.cpp  Gradients.h
src/user_api/: api.cpp  api.h
textures/: red_rubber.avif
